--- a/work/product/v1.html
+++ b/work/product/v1.html
@@ -12,7 +12,7 @@
         <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/product/" />
 
         <!-- Bootstrap core CSS -->
-        <link href="https://drive.google.com/uc?id=1duD9zB89cMa-XfVm0tKzk7bCns30f1bI&export=download" rel="stylesheet" />
+        <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
         <style>
             .bd-placeholder-img {
@@ -31,24 +31,24 @@
         </style>
 
         <!-- Custom styles for this template -->
-        <link href="https://drive.google.com/uc?id=1uvzc0ucAFkKlvVp1a1BR-C5RBRVA-RXS&export=download" rel="stylesheet" />
+        <link href="product.css" rel="stylesheet">
     </head>
     <body>
         <header class="site-header sticky-top py-1">
             <nav class="container d-flex flex-column flex-md-row justify-content-between">
-                <a class="py-2" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#" aria-label="Product">
+                <a class="py-2" href="#" aria-label="Product">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24">
                         <title>Product</title>
                         <circle cx="12" cy="12" r="10"></circle>
                         <path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"></path>
                     </svg>
                 </a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">關於</a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">設定Wi-Fi</a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">即時甜度</a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">韌體更新</a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">自動更新</a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">光學參數</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">關於</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">設定Wi-Fi</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">即時甜度</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">韌體更新</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">自動更新</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">光學參數</a>
             </nav>
         </header>
 
@@ -56,7 +56,7 @@
             <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
                 <div class="col-md-5 p-lg-5 mx-auto my-5">
                     <h1 class="display-4 fw-normal">聯網型甜度計</h1>
-                    <a class="btn btn-outline-secondary" href="file:///C:/Users/Isaac/Downloads/bootstrap-5.0.0-beta3-examples/bootstrap-5.0.0-beta3-examples/product/index.html#">關於</a>
+                    <a class="btn btn-outline-secondary" href="#">關於</a>
                 </div>
                 <div class="product-device shadow-sm d-none d-md-block"></div>
                 <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -120,15 +120,15 @@
                 <div class="col-6 col-md">
                     <h5>About</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Team</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Locations</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Privacy</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Terms</a></li>
+                        <li><a class="link-secondary" href="#">Team</a></li>
+                        <li><a class="link-secondary" href="#">Locations</a></li>
+                        <li><a class="link-secondary" href="#">Privacy</a></li>
+                        <li><a class="link-secondary" href="#">Terms</a></li>
                     </ul>
                 </div>
             </div>
         </footer>
 
-        <script src="https://drive.google.com/uc?id=1GW097E6ryTnFU9ptI2poifax483xeQ0Q&export=download"></script>
+        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
