--- a/work/product/v0.html
+++ b/work/product/v0.html
@@ -13,7 +13,7 @@
         <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/product/" />
 
         <!-- Bootstrap core CSS -->
-        <link href="https://drive.google.com/uc?id=1duD9zB89cMa-XfVm0tKzk7bCns30f1bI&export=download" rel="stylesheet" />
+        <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
         <style>
             .bd-placeholder-img {
@@ -32,25 +32,25 @@
         </style>
 
         <!-- Custom styles for this template -->
-        <link href="https://drive.google.com/uc?id=1uvzc0ucAFkKlvVp1a1BR-C5RBRVA-RXS&export=download" rel="stylesheet" />
+        <link href="product.css" rel="stylesheet">
     </head>
     <body>
         <header class="site-header sticky-top py-1">
             <nav class="container d-flex flex-column flex-md-row justify-content-between">
-                <a class="py-2" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#" aria-label="Product">
+                <a class="py-2" href="#" aria-label="Product">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24">
                         <title>Product</title>
                         <circle cx="12" cy="12" r="10"></circle>
                         <path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"></path>
                     </svg>
                 </a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Tour</a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Product</a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Features</a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Enterprise</a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Support</a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Pricing</a>
-                <a class="py-2 d-none d-md-inline-block" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Cart</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Product</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Features</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Support</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>
             </nav>
         </header>
 
@@ -59,7 +59,7 @@
                 <div class="col-md-5 p-lg-5 mx-auto my-5">
                     <h1 class="display-4 fw-normal">Punny headline</h1>
                     <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
-                    <a class="btn btn-outline-secondary" href="file:///C:/Users/Isaac/Downloads/bootstrap-5.0.0-beta3-examples/bootstrap-5.0.0-beta3-examples/product/index.html#">Coming soon</a>
+                    <a class="btn btn-outline-secondary" href="#">Coming soon</a>
                 </div>
                 <div class="product-device shadow-sm d-none d-md-block"></div>
                 <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -147,44 +147,44 @@
                 <div class="col-6 col-md">
                     <h5>Features</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Cool stuff</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Random feature</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Team feature</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Stuff for developers</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Another one</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Last time</a></li>
+                        <li><a class="link-secondary" href="#">Cool stuff</a></li>
+                        <li><a class="link-secondary" href="#">Random feature</a></li>
+                        <li><a class="link-secondary" href="#">Team feature</a></li>
+                        <li><a class="link-secondary" href="#">Stuff for developers</a></li>
+                        <li><a class="link-secondary" href="#">Another one</a></li>
+                        <li><a class="link-secondary" href="#">Last time</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md">
                     <h5>Resources</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Resource name</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Resource</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Another resource</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Final resource</a></li>
+                        <li><a class="link-secondary" href="#">Resource name</a></li>
+                        <li><a class="link-secondary" href="#">Resource</a></li>
+                        <li><a class="link-secondary" href="#">Another resource</a></li>
+                        <li><a class="link-secondary" href="#">Final resource</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md">
                     <h5>Resources</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Business</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Education</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Government</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Gaming</a></li>
+                        <li><a class="link-secondary" href="#">Business</a></li>
+                        <li><a class="link-secondary" href="#">Education</a></li>
+                        <li><a class="link-secondary" href="#">Government</a></li>
+                        <li><a class="link-secondary" href="#">Gaming</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md">
                     <h5>About</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Team</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Locations</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Privacy</a></li>
-                        <li><a class="link-secondary" href="file:///C:/Users/Isaac/Desktop/210409%20%E7%B6%B2%E9%A0%81%E5%89%8D%E7%AB%AF%E8%A8%AD%E8%A8%88/bootstrap-5.0.0-beta3-examples/product/index.html#">Terms</a></li>
+                        <li><a class="link-secondary" href="#">Team</a></li>
+                        <li><a class="link-secondary" href="#">Locations</a></li>
+                        <li><a class="link-secondary" href="#">Privacy</a></li>
+                        <li><a class="link-secondary" href="#">Terms</a></li>
                     </ul>
                 </div>
             </div>
         </footer>
 
-        <script src="https://drive.google.com/uc?id=1GW097E6ryTnFU9ptI2poifax483xeQ0Q&export=download"></script>
+        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
