--- a/work/product/v2.html
+++ b/work/product/v2.html
@@ -2,12 +2,11 @@
 <html lang="en">
     <head>
         <!-- Bootstrap core CSS -->
-        <!-- <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-        <link href="https://vimzyberry.github.io/bootstrap-5.0.0-beta3-examples/assets/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
         <!-- Custom styles for this template -->
-        <!-- <link href="product.css" rel="stylesheet"> -->
-        <link href="https://vimzyberry.github.io/bootstrap-5.0.0-beta3-examples/product/product.css" rel="stylesheet">
+        <link href="product.css" rel="stylesheet">
     </head>
     <body>
         <header class="site-header sticky-top py-1">
@@ -109,7 +108,6 @@
             </div>
         </footer>
 
-        <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
-        <script src="https://vimzyberry.github.io/bootstrap-5.0.0-beta3-examples/assets/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
